# screen_capture_opencv

./: CMakeLists.txt  LICENSE  README.md  Screen_Capture_Example_OpenCV.cpp
